# BBO-sequence-design

./: .gitignore  .pre-commit-config.yaml  README.md  download_landscape.sh  draw.ipynb  pyproject.toml  requirements.txt  run.py  run.sh  test.ipynb  test.py
algorithm/: __init__.py  antbo.py  antbo2.py  batchbo.py  bo.py  botorch.py  genetic.py  nnbo.py  pex.py  pexcons.py  random.py
landscape/: __init__.py  custom_landscape.py
model/: __init__.py  cnn.py  ensemble.py  esm1b.py  gp_mufacnet.py  gpcnn.py  mufacnet.py  rnn.py  torch_model.py  torch_model_lightning.py
unify-length/: 1ADQ_A.csv  1FNS_A.csv  1JHL_A.csv  1PKQ_J.csv  1RJL_C.csv  1TQB_A.csv  1UJ3_C.csv  1V7M_V.csv  1WEJ_F.csv  1YJD_C.csv  1Z3G_A.csv  1ZTX_E.csv  2B2X_A.csv  2DD8_S.csv  2HFG_R.csv  2IH3_C.csv  2JEL_P.csv  2R29_A.csv  2R56_A.csv  2R56_A.txt  2UZI_R.csv  2VXQ_A.csv  2VXT_I.csv  2W9E_A.csv  analyzedata.ipynb  data_ADQ_A.json  data_FNS_A.json  data_JHL_A.json  data_PKQ_J.json  data_R56_A.json  data_RJL_C.json  data_TQB_A.json  data_UJ3_C.json
utils/: eval_utils.py  os_utils.py  seq_utils.py
