[tool.poetry]
name = "proximal-exploration-active-learning"
version = "0.1.0"
description = "Explore fitness landscape given a set of protein sequences."
authors = ["Tianyu Shi <tianyu_2022@biomap.com>", "Yi Zhou <zhouyi@biomap.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = { version = "^1.24.0", source = "China" }
pandas = { version = "^1.5.2", source = "China" }
sequence-models = { version = "^1.6.0", source = "China" }
Levenshtein = { version = "^0.20.8", source = "China" }
h5py = {version = ">=2", source = "China"}
flexs = { version = "^0.2.8", source = "China" }
torch = { version = ">=1.10.2", source = "China" }
gpytorch = {version = "^1.9.0", source = "China"}

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "China"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
